--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PrivaDroid</string>
+
+    <string name="agree_to_terms">Agree to terms above</string>
+    <string name="start_using_app_button">Start</string>
+    <string name="terms_title">Terms</string>
+    <string name="terms_description">Terms description</string>
 </resources>
