--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="start_using_app_button">Start</string>
     <string name="terms_title">Terms</string>
     <string name="terms_description">Terms description</string>
+
+    <string name="skip_tutorial">Skip</string>
 </resources>
