--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,12 @@
     <string name="app_name">PrivaDroid</string>
 
     <string name="agree_to_terms">Agree to terms above</string>
-    <string name="start_using_app_button">Start</string>
+    <string name="continue_app_settings_button">Continue</string>
     <string name="terms_title">Terms</string>
     <string name="terms_description">Terms description</string>
 
     <string name="skip_tutorial">Skip</string>
+    <string name="join_app">Start</string>
 
     <string name="community">Community</string>
     <string name="permission">Permission</string>
