--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
         This permission is needed for PrivaDroid to be able to read permission name on the screen and detect click events when granting/denying permission requests.
     </string>
 
-    <string name="tutorial_app_usage_title">App Usage</string>
+    <string name="tutorial_app_usage_title">App Usage Access</string>
     <string name="tutorial_app_usage_description">
         Usage access allows PrivaDroid to track what other apps you are using and how often, as well as your carrier, language settings,
         and other details.
@@ -47,7 +47,8 @@
     <string name="app_install">App Install</string>
     <string name="profile">Profile</string>
 
-    <string name="your_id">Your ID</string>
+    <string name="your_id">PrivaDroid ID</string>
+    <string name="join_date">Join Date</string>
 
     <string name="empty" />
 </resources>
