--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,11 @@
     <string name="your_id">PrivaDroid ID</string>
     <string name="join_date">Join Date</string>
 
+    <string name="app_install_screen_title">App Install</string>
+    <string name="app_uninstall_screen_title">App Uninstall</string>
+    <string name="surveyed">Surveyed</string>
+    <string name="unsurveyed">Unsurveyed</string>
+    <string name="summary">Summary</string>
+
     <string name="empty" />
 </resources>
