Added activity surveyed and unsurveyed activity top bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,9 @@
     <string name="community_screen_title">Community</string>
     <string name="permission_screen_title">Permission</string>
     <string name="surveyed">Surveyed</string>
+    <string name="surveyed_events">Surveyed Events</string>
     <string name="unsurveyed">Unsurveyed</string>
+    <string name="unsurveyed_events">Unsurveyed Event</string>
     <string name="summary">Summary</string>
     <string name="view_data">View Data</string>
 
