--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="demographic_screen_title">Demographic Survey</string>
 
     <string name="surveyed_events_activity_title">Surveyed Events</string>
-    <string name="unsurveyed_events_activity_title">Unsurveyed Events</string>]
+    <string name="unsurveyed_events_activity_title">Unsurveyed Events</string>
 
     <plurals name="number_of_app_install_surveyed_events_card_description">
         <item quantity="one">You have %d surveyed app install event.</item>
@@ -87,12 +87,25 @@
         <item quantity="other">You have %d unsurveyed app uninstall events.</item>
     </plurals>
 
+    <plurals name="number_of_permission_unsurveyed_events_card_description">
+        <item quantity="one">You have %d unsurveyed permission request event.</item>
+        <item quantity="other">You have %d unsurveyed permission request events.</item>
+    </plurals>
+
+    <plurals name="number_of_permission_surveyed_events_card_description">
+        <item quantity="one">You have %d unsurveyed permission request event.</item>
+        <item quantity="other">You have %d unsurveyed permission request events.</item>
+    </plurals>
+
     <string name="empty" />
 
     <string name="why_install_app_on_date_list_item_description">Why did you install %1$s on %2$s?</string>
     <string name="why_uninstall_app_on_date_list_item_description">Why did you uninstall %1$s on %2$s?</string>
     <string name="why_install_app_description">Why did you install %1$s?</string>
     <string name="why_uninstall_app_description">Why did you uninstall %1$s?</string>
+    <string name="permission_app_name_list_item_title">%1$s of %2$s</string>
+    <string name="why_grant_permission_for_app_description">Why did you grant %1$s permission to %2$s app on %3$s?</string>
+    <string name="why_deny_permission_for_app_description">Why did you deny %1$s permission to %2$s app on %3$s?</string>
 
     <!--  App uninstall survey questions  -->
     <string name="app_uninstall_question_why">1. Why did you uninstall the app?</string>
@@ -125,6 +138,56 @@
         <item>Storage</item>
         <item>None</item>
         <item>I don\'t remember</item>
+    </array>
+
+    <!--  Permission survey questions  -->
+    <string name="permission_grant_question_why">1. Why did you grant the permission request?</string>
+    <array name="permission_grant_options_why">
+        <item>Select an option</item>
+        <item>I want to use a specific feature that requires this permission</item>
+        <item>I trust the app developer</item>
+        <item>I think the app won\’t work otherwise</item>
+        <item>I have nothing to hide</item>
+        <item>Nothing bad will happen</item>
+        <item>The app developer already has this information about me</item>
+        <item>I wanted the permission screen to go away</item>
+        <item>Because the app is popular</item>
+        <item>I didn\’t know I did that</item>
+        <item>I won\’t be able to grant this permission later</item>
+        <item>None of the above</item>
+    </array>
+
+    <string name="permission_deny_question_why">1. Why did you deny the permission request?</string>
+    <array name="permission_deny_options_why">
+        <item>Select an option</item>
+        <item>I think the app shouldn\’t need this permission</item>
+        <item>I expect the app will still work without this permission</item>
+        <item>I can always grant it afterwards if I change my mind</item>
+        <item>I do not use the specific feature associated with the permission</item>
+        <item>I consider the permission to be very sensitive</item>
+        <item>I don\’t trust the developer enough to provide this information</item>
+        <item>I wanted the permission screen to go away</item>
+        <item>I think something bad might happen if I provide this permission</item>
+        <item>I didn\’t know I did that</item>
+        <item>None of the above</item>
+    </array>
+
+    <string name="permission_question_expect_request">2. Did you expect the app requests this permission?</string>
+    <array name="permission_options_expect_request">
+        <item>Select an option</item>
+        <item>Yes</item>
+        <item>No</item>
+    </array>
+
+    <string name="permission_grant_question_comfortable">3. How comfortable do you feel granting this permission request?</string>
+    <string name="permission_deny_question_comfortable">3. How comfortable do you feel denying this permission request?</string>
+    <array name="permission_options_comfortable">
+        <item>Select an option</item>
+        <item>Very uncomfortable</item>
+        <item>Somewhat uncomfortable</item>
+        <item>Neutral</item>
+        <item>Somewhat comfortable</item>
+        <item>Very comfortable</item>
     </array>
 
     <!--  App install survey questions  -->
