Added don't allow in proactive permission deny button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -630,6 +630,7 @@
         <item>deny anyway</item>
         <item>discard</item>
         <item>done</item>
+        <item>don\'t allow</item>
         <item>later</item>
         <item>no</item>
         <item>not now</item>
